--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -14,6 +14,7 @@
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1",
     "vue": "^3.0.0",
+    "vue-dropdowns": "^1.1.2",
     "vue-router": "^4.0.0-0"
   },
   "devDependencies": {
