--- a/FrontEnd/auth-config.json
+++ b/FrontEnd/auth-config.json
@@ -1,5 +1,5 @@
 {
-  "domain": "rfhstrong.us.auth0.com",
-  "client_id": "Yjv0CglGAdWgSaHB1iMrmVyqBb1ETutb",
-  "redirect_uri": "http://localhost:8080/ContactUs"
+  "domain": "crqt.us.auth0.com",
+  "client_id": "ZunrhfMEZp3p8IaUqsKuLdA7rKVaZi32",
+  "redirect_uri": "http://localhost:8080"
 }
