--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@auth0/auth0-spa-js": "^1.13.6",
+    "@syncfusion/ej2-vue-dropdowns": "^18.4.43",
     "axios": "^0.21.1",
     "bootstrap": "^4.5.3",
     "convert-csv-to-json": "^1.3.0",
