--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -12,6 +12,7 @@
     "@syncfusion/ej2-vue-dropdowns": "^18.4.43",
     "axios": "^0.21.1",
     "bootstrap": "^4.5.3",
+    "chart.js": "^2.9.4",
     "convert-csv-to-json": "^1.3.0",
     "core-js": "^3.6.5",
     "cors": "^2.8.5",
