--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -25,7 +25,8 @@
     "vue": "^3.0.6",
     "vue-csv-import": "^4.0.1",
     "vue-dropdowns": "^1.1.2",
-    "vue-router": "^4.0.0-0"
+    "vue-router": "^4.0.0-0",
+    "vue3-chart-v2": "^0.8.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
