--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -18,8 +18,9 @@
     "cors": "^2.8.5",
     "csvtojson": "^2.0.10",
     "d3": "^6.5.0",
+    "datatables.net-dt": "^1.10.24",
     "fs": "0.0.1-security",
-    "jquery": "^3.5.1",
+    "jquery": "^3.6.0",
     "papaparse": "^5.3.0",
     "popper.js": "^1.16.1",
     "vue": "^3.0.6",
