--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -18,6 +18,7 @@
     "cors": "^2.8.5",
     "csvtojson": "^2.0.10",
     "d3": "^6.5.0",
+    "d3-array": "^2.12.0",
     "datatables.net-dt": "^1.10.24",
     "fs": "0.0.1-security",
     "jquery": "^3.6.0",
