--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -9,7 +9,11 @@
   },
   "dependencies": {
     "@auth0/auth0-spa-js": "^1.13.6",
+    "@progress/kendo-dropdowntree-vue-wrapper": "^2021.1.224",
+    "@riophae/vue-treeselect": "^0.4.0",
+    "@syncfusion/ej2-vue-buttons": "^18.4.46",
     "@syncfusion/ej2-vue-dropdowns": "^18.4.43",
+    "@vueform/multiselect": "^1.3.5",
     "axios": "^0.21.1",
     "bootstrap": "^4.5.3",
     "chart.js": "^2.9.4",
@@ -26,7 +30,9 @@
     "vue": "^3.0.6",
     "vue-csv-import": "^4.0.1",
     "vue-dropdowns": "^1.1.2",
+    "vue-multiselect": "^2.1.6",
     "vue-router": "^4.0.0-0",
+    "vue-select": "^3.11.2",
     "vue3-chart-v2": "^0.8.1"
   },
   "devDependencies": {
