--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -25,6 +25,7 @@
     "datatables.net-dt": "^1.10.24",
     "fs": "0.0.1-security",
     "jquery": "^3.6.0",
+    "ng-multiselect-dropdown": "^0.3.4",
     "papaparse": "^5.3.0",
     "popper.js": "^1.16.1",
     "vue": "^3.0.6",
@@ -33,7 +34,9 @@
     "vue-multiselect": "^2.1.6",
     "vue-router": "^4.0.0-0",
     "vue-select": "^3.11.2",
-    "vue3-chart-v2": "^0.8.1"
+    "vue-table-dynamic": "^0.4.4",
+    "vue3-chart-v2": "^0.8.1",
+    "vue3-table-lite": "^1.0.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
