--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -24,6 +24,7 @@
     "d3": "^6.5.0",
     "datatables.net-dt": "^1.10.24",
     "fs": "0.0.1-security",
+    "handsontable": "^8.3.2",
     "jquery": "^3.6.0",
     "papaparse": "^5.3.0",
     "popper.js": "^1.16.1",
