--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -27,6 +27,7 @@
     "fs": "0.0.1-security",
     "handsontable": "^8.3.2",
     "jquery": "^3.6.0",
+    "lodash": "^4.17.21",
     "ng-multiselect-dropdown": "^0.3.4",
     "papaparse": "^5.3.0",
     "popper.js": "^1.16.1",
